[fix] mapper에서 soptActivity 삭제 및 서비스단에서 기수별 활동 프로젝트 정보 연결 구현