@@ -19,7 +19,6 @@ import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.sopt.makers.internal.coffeechat.dto.request.MemberCoffeeChatPropertyDto;
 import org.sopt.makers.internal.coffeechat.service.CoffeeChatRetriever;
-import org.sopt.makers.internal.common.util.InfiniteScrollUtil;
 import org.sopt.makers.internal.community.repository.post.CommunityPostRepository;
 import org.sopt.makers.internal.community.service.ReviewService;
 import org.sopt.makers.internal.exception.ClientBadRequestException;
@@ -145,14 +144,12 @@ public class MemberService {
         Member member = getMemberHasProfileById(profileId);
         InternalUserDetails userDetails = platformService.getInternalUser(profileId);
         List<MemberProfileProjectDao> memberProfileProjects = getMemberProfileProjects(profileId);
-
         val activityMap = getMemberProfileActivity(userDetails.soptActivities(), memberProfileProjects);
         val soptActivity = getMemberProfileProjects(userDetails.soptActivities(), memberProfileProjects);
-
         List<MemberProfileProjectVo> soptActivityResponse = soptActivity.stream()
                 .map(m -> new MemberProfileProjectVo(m.id(), m.generation(), m.part(), checkTeamNullCondition(m.team()),
                         m.projects()))
-                .collect(Collectors.toList());
+                .toList();
         List<MemberActivityResponse> activityResponses = activityMap.entrySet().stream()
                 .map(entry -> new MemberActivityResponse(entry.getKey(), entry.getValue()))
                 .collect(Collectors.toList());
@@ -160,10 +157,34 @@ public class MemberService {
         boolean isCoffeeChatActivate = coffeeChatRetriever.existsCoffeeChat(member);
         MemberProfileSpecificResponse response = memberMapper.toProfileSpecificResponse(
                 member, userDetails, isMine, memberProfileProjects,
-                activityResponses, soptActivityResponse, isCoffeeChatActivate
+                activityResponses, isCoffeeChatActivate
         );
 
-        return MemberProfileSpecificResponse.applyPhoneMasking(response, isMine, isCoffeeChatActivate);
+        Map<Integer, MemberProfileProjectVo> projectMap = soptActivityResponse.stream()
+                .collect(Collectors.toMap(MemberProfileProjectVo::generation, vo -> vo));
+
+        // soptActivities 갱신 (response.soptActivities()에 soptActivityResponse 붙히기)
+        List<MemberProfileSpecificResponse.SoptMemberActivityResponse> updatedActivities = response.soptActivities().stream()
+                .map(sa -> {
+                    MemberProfileProjectVo matched = projectMap.get(sa.generation());
+                    if (matched != null) {
+                        return new MemberProfileSpecificResponse.SoptMemberActivityResponse(
+                                sa.generation(),
+                                sa.part(),
+                                sa.team(),
+                                matched.projects()
+                        );
+                    }
+                    return sa;
+                }).toList();
+
+        // updatedActivities set 해주기
+        MemberProfileSpecificResponse updateResponse = new MemberProfileSpecificResponse(response.name(), response.profileImage(),
+                response.birthday(), response.isPhoneBlind(), response.phone(), response.email(), response.address(), response.university(),
+                response.major(), response.introduction(), response.skill(), response.mbti(), response.mbtiDescription(), response.sojuCapacity(),
+                response.interest(), response.userFavor(), response.idealType(), response.selfIntroduction(), response.activities(), updatedActivities,
+                response.links(), response.projects(), response.careers(), response.allowOfficial(), response.isCoffeeChatActivate(), response.isMine());
+        return MemberProfileSpecificResponse.applyPhoneMasking(updateResponse, isMine, isCoffeeChatActivate);
     }
 
     @Transactional(readOnly = true)
@@ -694,4 +715,5 @@ public class MemberService {
                     return new MakersMemberProfileResponse(userDetail.userId(), userDetail.name(), userDetail.profileImage(), memberSoptActivityResponses, memberCareerResponses);
                 }).toList();
     }
+
 }
